test one bit at aa time

--- a/.github/workflows/ldap-data-refresh.yml
+++ b/.github/workflows/ldap-data-refresh.yml
@@ -149,74 +149,6 @@ jobs:
             --task $(aws ecs list-tasks --cluster ${cluster} --service-name ${service} --query "taskArns[0]" --output text) \
             --container ldap \
             --command "bash -c '
-              users=(${USERS_LIST});
-              [ -f testusers.ldif ] && mv testusers.ldif testusers.ldif.bak;
-              for username in \"\${users[@]}\"; do
-                dn=cn=\$username,ou=Users,dc=moj,dc=com;
-                echo Getting user \$dn...;
-                ldapsearch -Y external -Q -H ldapi:// -LLL -b \"\$dn\" >> testusers.ldif;
-              done;
-              awk '\''!NF {delete seen; print; next} !seen[\$0]++'\'' testusers.ldif > testusers.no-duplicates.ldif
-              mv testusers.no-duplicates.ldif testusers.ldif
+              echo "remote command worked" >/tmp/ldap_remote_command
             '" \
           --interactive
-          
-
-    needs:
-      - cleanup
-    uses: ./.github/workflows/ldap-remove-user-passwords.yml
-    with:
-      environment: ${{ github.event.inputs.destination_env }}
-    secrets: inherit
-  import-test-users: # check escaping here
-    needs: remove-passwords
-    steps:
-      - name: "Configure AWS Credentials"
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          role-to-assume: "arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/modernisation-platform-oidc-cicd"
-          role-session-name: "hmpps-delius-operational-automation-${{ github.run_number }}"
-          aws-region: "eu-west-2"
-
-      - name: Import test users
-        if: ${{ env.destination_env == 'preprod' }}
-        run: |
-          USERS_LIST=$(echo "${TEST_USERS}" | xargs)
-
-          aws ecs execute-command \
-            --cluster "${cluster}" \
-            --task $(aws ecs list-tasks --cluster "${cluster}" --service-name "${service}" --query "taskArns[0]" --output text) \
-            --container ldap \
-            --command "bash -c '
-              # Define the join_by function
-              join_by() {
-                local d=\"\${1-}\" f=\"\${2-}\"
-                if shift 2; then
-                  printf %s \"\$f\" \"\${@/#/\$d}\"
-                fi
-              }
-
-              # Extract users from ldif file
-              users=(\$(grep \"^dn: cn=[^,]*,ou=Users\" testusers.ldif | sed -E \"s/^dn: cn=([^,]*),.*/\1/\"))
-
-              # Delete users
-              for username in \${users[@]}; do
-                  dn=cn=\$username,ou=Users,dc=moj,dc=com
-                  echo Deleting user \$dn...
-                  ldapdelete -Y external -Q -H ldapi:// -r \"\$dn\"
-              done
-
-              # Add users back
-              echo Adding users...
-              ldapadd -Y external -Q -H ldapi:// -f testusers.ldif -c
-
-              # Remove email and password from other users
-              echo Removing email and password from all other users...
-              joined=\$(join_by ')(' \${users[@]})
-              exclude_test_user_filter='(!(|(cn=\"\${joined}\")))'
-              ldap_password=\$(aws ssm get-parameter --name '/delius-pre-prod/delius/apacheds/apacheds/ldap_admin_password' --with-decryption --query Parameter.Value --output text --region eu-west-2)
-              ldapsearch -D cn=root,dc=moj,dc=com -w \"\$ldap_password\" -b ou=Users,dc=moj,dc=com -s one -LLL \"\$exclude_test_user_filter\" dn \
-                | sed -E \"s/^(dn:.*)/\1\nchangetype: modify\ndelete: mail\n\n\1\nchangetype: modify\ndelete: userPassword/\" \
-                | ldapmodify -Y external -Q -H ldapi:// -c
-            '" \
-            --interactive
