--- a/playbooks/delius_oem_metrics_setup/delius_oem_metrics_setup/tasks/modify_metric_thresholds.yml
+++ b/playbooks/delius_oem_metrics_setup/delius_oem_metrics_setup/tasks/modify_metric_thresholds.yml
@@ -1,12 +1,8 @@
 ---
 - name: Import Incident Rule Set for Delius Targets
   block:
-    # EMCLI Login script contains a password so ensure it is not readable by other users
-    - name: Copy EMCLI Login scripts
-      template:
-        src: "{{ playbook_dir }}/../../common/templates/emcli_login.sh.j2"
-        dest: "{{ stage }}/emcli_login.sh"
-        mode: "0700"
+    - name: Ensure EMCLI session is ready
+      include_tasks: "{{ playbook_dir }}/../../common/tasks/emcli_login.yml"
 
     - name: Initialize All Metrics
       set_fact:
@@ -36,7 +32,6 @@
 
     - name: Set the Metric Thresholds
       shell: |
-        . {{ stage }}/emcli_login.sh
         cat <<-EOINPUT > {{ stage }}/oem_threshold.txt
         {{ item.1.input_file }}
         EOINPUT
@@ -65,7 +60,6 @@
 
     - name: Enable and Disable Collections
       shell: |
-        . {{ stage }}/emcli_login.sh
         echo "Setting scheduler state for {{ item.1.target_type }} {{ item.0.target_name }} {{ item.1.collection_name }}"
         {{ emcli }} modify_collection_schedule -targetNames={{ item.0.target_name }} -targetType={{ item.1.target_type }} \
               -collectionName={{ item.1.collection_name }} \
@@ -88,7 +82,6 @@
     #            Mon...Sun for Weekly}{One or more from 1;2..31 or Last for Month}
     - name: Reschedule Collections
       shell: |
-        . {{ stage }}/emcli_login.sh
         echo "Setting scheduler frequency for {{ item.1.target_type }} {{ item.0.target_name }} {{ item.1.collection_name }}"
         {{ emcli }} modify_collection_schedule -targetNames={{ item.0.target_name }} -targetType={{ item.1.target_type }} \
               -collectionName={{ item.1.collection_name }} \
@@ -121,5 +114,4 @@
         state: absent
       loop:
         - oem_threshold.txt
-        - emcli_login.sh
       tags: remove_temporary_files
