--- a/playbooks/oracle_release_update/update_oem/tasks/modify_target.yml
+++ b/playbooks/oracle_release_update/update_oem/tasks/modify_target.yml
@@ -1,9 +1,11 @@
 ---
+- name: Ensure EMCLI session is ready
+  include_tasks: "{{ playbook_dir }}/../../common/tasks/emcli_login.yml"
+
 # Get name of the existing target for the specified target type
 # We only expect to see 1 HAS target, 1 ASM target and 1 Listener target on a given host (and all should be running from the Grid Infrastructure Home)
 - name: Generate Command to Get Existing Target Name
   shell: |
-    . {{ stage }}/emcli_login.sh >/dev/null
     {{ emcli }} list -resource="Targets" -search="HOST_NAME='{{ agent_host }}'" -search="TARGET_TYPE='{{ target_type }}'" -column="TARGET_NAME" -script -noheader
   register: existing_target_name
   changed_when: false
@@ -14,7 +16,6 @@
 
 - name: Get the Target Home
   shell: |
-    . {{ stage }}/emcli_login.sh >/dev/null
     {{ get_target_home_cmd }}
   register: get_target_home_match
   changed_when: false
@@ -28,7 +29,6 @@
   block:
     - name: Modify Target
       shell: |
-        . {{ stage }}/emcli_login.sh >/dev/null
          PROPERTIES="OracleHome:{{ target_gi_home }}"
          [[ "{{ target_type }}" == "oracle_listener" ]] && PROPERTIES="${PROPERTIES};ListenerOraDir:{{ target_gi_home }}/network/admin/"
          [[ "{{ target_type }}" == "osm_instance" ]] && PROPERTIES="${PROPERTIES}"
