--- a/playbooks/oracle_restore_points/get_facts.yml
+++ b/playbooks/oracle_restore_points/get_facts.yml
@@ -24,3 +24,4 @@
     assume_role_name: "{{ catalog_secretsmanager_passwords['catalog'].assume_role_name }}"
     secret_account_id: "{{ account_ids[catalog_secretsmanager_passwords['catalog'].account_name] }}"
     secret: "{{ catalog_secretsmanager_passwords['catalog'].secret }}"
+  no_log: true
