--- a/playbooks/oracle_release_update/oracle_release_update/tasks/main.yml
+++ b/playbooks/oracle_release_update/oracle_release_update/tasks/main.yml
@@ -425,7 +425,7 @@
         delegation_host: "{{ hostvars[primary_host]['inventory_hostname'] }}"
         primary_hostname: "{{ hostvars[primary_host]['inventory_hostname'] }}"
         fsfo_mode: "{{ hostvars[primary_host]['fsfo_mode'] | default('disabled') }}"
-        high_availability_count: "{{ high_availability_count[application]] }}"
+        high_availability_count: "{{ high_availability_count[application] }}"
       when:
         - high_availability_count[application] | int > 0
         - hostvars[primary_host]['fsfo_mode'] | default('disabled') | lower in ['enabled','observe','observer']
