Get the application name

--- a/.github/workflows/oracle-db-release-update.yml
+++ b/.github/workflows/oracle-db-release-update.yml
@@ -114,6 +114,7 @@ jobs:
         run: |
           hosts="environment_name_$(echo ${{ github.event.inputs.TargetEnvironment }} | sed 's/dev/development_dev/;s/test/test_test/;s/training/test_training/;s/stage/preproduction_stage/;s/pre-prod/preproduction_pre_prod/;s/-prod/_production_prod/;s/-/_/g')_${{ github.event.inputs.TargetHost }}"
           echo "hosts=${hosts}" >> $GITHUB_OUTPUT
+          echo "application=$(echo ${$(echo ${{github.event.inputs.TargetHost }})%%_*})" >> $GITHUB_OUTPUT
 
       - name: Checkout Inventory From modernisation-platform-configuration-management
         uses: actions/checkout@v4
@@ -187,4 +188,5 @@ jobs:
           -e combo_patch_info='${{ github.event.inputs.ComboPatch }}' \
           -e "keep_aws_snapshot='${{github.event.inputs.AWSSnapShot }}'" \
           -e gi_ru_patch_info='' \
-          -e ojvm_ru_patch_info=''
+          -e ojvm_ru_patch_info='' \
+          -e application=${{ steps.prepareinventorynames.outputs.application }}
