--- a/playbooks/oracle_release_update/oracle_release_update/tasks/main.yml
+++ b/playbooks/oracle_release_update/oracle_release_update/tasks/main.yml
@@ -430,7 +430,7 @@
         fsfo_mode: "{{ hostvars[primary_host]['fsfo_mode'] | default('disabled') }}"
         high_availability_count: "{{ high_availability_count[application] }}"
       when:
-        - ( high_availability_count[application] | int ) > 0
+        - ( high_availability_count[application] | trim ) != '0'
         - hostvars[primary_host]['fsfo_mode'] | default('disabled') | lower in ['enabled','observe','observer']
         - group_names | select('match','.*_standbydb1') | length > 0
 
