--- a/playbooks/oracle_release_update/oracle_release_update/tasks/main.yml
+++ b/playbooks/oracle_release_update/oracle_release_update/tasks/main.yml
@@ -419,6 +419,8 @@
       set_fact:
         high_availability_count_for_app: "{{ high_availability_count[application] | int }}"
 
+    - debug: msg="{{ high_availability_count_for_app | type_debug }}"
+
     # Re-Enable FSFO from Associated Primary
     # (Only run from First Standby for each Database Type to avoid competing startups)
     - name: Re-enable FSFO
