--- a/playbooks/oracle_release_update/oracle_release_update/tasks/main.yml
+++ b/playbooks/oracle_release_update/oracle_release_update/tasks/main.yml
@@ -422,12 +422,6 @@
       set_fact:
         high_availability_count_for_app: "{{ high_availability_count[application] }}"
 
-    - debug:
-        var: high_availability_count_for_app
-
-    - debug:
-        var: hostvars[primary_host]['fsfo_mode']
-
     # Re-Enable FSFO from Associated Primary
     # (Only run from First Standby for each Database Type to avoid competing startups)
     - name: Re-enable FSFO
@@ -439,6 +433,7 @@
         primary_hostname: "{{ hostvars[primary_host]['inventory_hostname'] }}"
         fsfo_mode: "{{ hostvars[primary_host]['fsfo_mode'] | default('disabled') }}"
         high_availability_count: "{{ high_availability_count_for_app }}"
+        database_type: "{{ application }}"
       when:
         - high_availability_count_for_app | int > 0
         - hostvars[primary_host]['fsfo_mode'] | default('disabled') | lower in ['enabled','observe','observer']
