--- a/playbooks/oracle_release_update/oracle_release_update/tasks/main.yml
+++ b/playbooks/oracle_release_update/oracle_release_update/tasks/main.yml
@@ -424,16 +424,30 @@
 
     # Re-Enable FSFO from Associated Primary
     # (Only run from First Standby for each Database Type to avoid competing startups)
-    - name: Re-enable FSFO
+    # - name: Re-enable FSFO
+    #   include_role:
+    #     name: hmpps-delius-oracledb-ha
+    #     tasks_from: enable-fsfo.yml
+    #   vars:
+    #     delegation_host: "{{ hostvars[primary_host]['inventory_hostname'] }}"
+    #     primary_hostname: "{{ hostvars[primary_host]['inventory_hostname'] }}"
+    #     fsfo_mode: "{{ hostvars[primary_host]['fsfo_mode'] | default('disabled') }}"
+    #     high_availability_count: "{{ high_availability_count_for_app }}"
+    #     database_type: "{{ application }}"
+    #   when:
+    #     - high_availability_count_for_app | int > 0
+    #     - hostvars[primary_host]['fsfo_mode'] | default('disabled') | lower in ['enabled','observe','observer']
+
+    - name: Re-Enable FSFO from Associated Primary
       include_role:
-        name: hmpps-delius-oracledb-ha
-        tasks_from: enable-fsfo.yml
+          name: hmpps-delius-oracledb-ha
       vars:
-        delegation_host: "{{ hostvars[primary_host]['inventory_hostname'] }}"
-        primary_hostname: "{{ hostvars[primary_host]['inventory_hostname'] }}"
-        fsfo_mode: "{{ hostvars[primary_host]['fsfo_mode'] | default('disabled') }}"
-        high_availability_count: "{{ high_availability_count_for_app }}"
-        database_type: "{{ application }}"
+        force_restore: true
+        password_rotation: false
+        method: "fsfo setup"
+        primary: "{{ primary_host }}"
+        standby_number: 0
+      delegate_to: "{{ primary_host }}"    
       when:
         - high_availability_count_for_app | int > 0
         - hostvars[primary_host]['fsfo_mode'] | default('disabled') | lower in ['enabled','observe','observer']
