--- a/playbooks/oracle_ha/build-ha/tasks/main.yml
+++ b/playbooks/oracle_ha/build-ha/tasks/main.yml
@@ -32,7 +32,7 @@
     var: primary_host
 
 - debug:
-    var: fqdn
+    var: hostvars[primary_host]['ansible_facts']['fqdn']
 
 - name: (main/set-primary-config) Handle FQDN For Primary and Standby Host 1 TNS Purposes
   set_fact:
