--- a/playbooks/oracle_ha/build-ha/tasks/main.yml
+++ b/playbooks/oracle_ha/build-ha/tasks/main.yml
@@ -34,6 +34,9 @@
 - debug:
     var: hostvars[primary_host]['ansible_facts']['fqdn']
 
+- debug:
+    var: primary_host_tns
+
 - name: (main/set-primary-config) Handle FQDN For Primary and Standby Host 1 TNS Purposes
   set_fact:
     primary_host_tns: "{{ hostvars[primary_host]['ansible_facts']['fqdn'] }}"
