--- a/playbooks/oracle_release_update/oracle_release_update/tasks/main.yml
+++ b/playbooks/oracle_release_update/oracle_release_update/tasks/main.yml
@@ -438,6 +438,13 @@
     #     - high_availability_count_for_app | int > 0
     #     - hostvars[primary_host]['fsfo_mode'] | default('disabled') | lower in ['enabled','observe','observer']
 
+
+    # FQDN required for Build HA role
+    - name: Gather only fqdn
+      ansible.builtin.setup:
+        gather_subset:
+          - fqdn
+
     - name: Re-Enable FSFO from Associated Primary
       include_role:
         name: hmpps-delius-oracledb-ha
