--- a/playbooks/oracle_release_update/oracle_release_update/tasks/main.yml
+++ b/playbooks/oracle_release_update/oracle_release_update/tasks/main.yml
@@ -443,7 +443,7 @@
     - name: Gather only fqdn
       ansible.builtin.setup:
         gather_subset:
-          - fqdn
+          - network
 
     - name: Re-Enable FSFO from Associated Primary
       include_role:
