--- a/playbooks/oracle_release_update/oracle_release_update/tasks/main.yml
+++ b/playbooks/oracle_release_update/oracle_release_update/tasks/main.yml
@@ -451,7 +451,7 @@
         force_restore: true
         password_rotation: false
         method: "fsfo setup"
-        primary: "{{ primary_host }}"
+        primary: "{{ hostvars[primary_host]['inventory_hostname'] }}"
         standby_number: 0
       when:
         - high_availability_count_for_app | int > 0
