--- a/playbooks/oracle_ha/build-ha/tasks/main.yml
+++ b/playbooks/oracle_ha/build-ha/tasks/main.yml
@@ -31,6 +31,9 @@
 - debug:
     var: ansible_facts
 
+- debug:
+    var: primary_host
+
 - name: (main/set-primary-config) Handle FQDN For Primary and Standby Host 1 TNS Purposes
   set_fact:
     primary_host_tns: "{{ hostvars[primary_host]['ansible_facts']['fqdn'] }}"
