--- a/.github/workflows/oracle-db-logfile-housekeeping.yml
+++ b/.github/workflows/oracle-db-logfile-housekeeping.yml
@@ -38,7 +38,7 @@ on:
 
 env:
   ansible_config: operations/playbooks/ansible.cfg
-  command: ansible-playbook operations/playbooks/oracle_logfile_housekeeping/playbook.yml
+  command: ansible-playbook operations/ansible/site.yml -e force_role=oracle-db-housekeeping -e role=oracle-db-housekeeping
   inventory: inventory/ansible
 
 # Allow permissions on repository and docker image respectively 
@@ -75,16 +75,19 @@ jobs:
           ref: ${{ github.event.inputs.SourceConfigVersion }}
           fetch-depth: 0
 
-      - name: Checkout From hmpps-delius-operational-automation
+      - name: Checkout Ansible Required Roles From modernisation-platform-configuration-management
         uses: actions/checkout@v4
         with:
-          repository: ministryofjustice/hmpps-delius-operational-automation
+          repository: ministryofjustice/modernisation-platform-configuration-management
           sparse-checkout-cone-mode: false
           sparse-checkout: |
-                           playbooks/oracle_logfile_housekeeping
-                           playbooks/ansible.cfg
+            ansible/roles/oracle-db-housekeeping
+            ansible/roles/get-ec2-facts
+            ansible/roles/get-modernisation-platform-facts
+            ansible/roles/epel
+            ansible/site.yml
           path: operations
-          ref: ${{ github.event.inputs.SourceCodeVersion }}
+          ref: ${{ github.event.inputs.SourceConfigVersion }}
           fetch-depth: 0
 
       - name: Configure AWS Credentials
@@ -100,4 +103,4 @@ jobs:
         run: |
           export ANSIBLE_CONFIG=$ansible_config
           $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
-          -e target_hosts=${{ steps.prepareinventorynames.outputs.hosts }}
+          -e target=${{ steps.prepareinventorynames.outputs.hosts }}
