Default Primary Host if not set

--- a/playbooks/oracle_ha/build-ha/tasks/main.yml
+++ b/playbooks/oracle_ha/build-ha/tasks/main.yml
@@ -36,7 +36,7 @@
 
 - name: (main/set-primary-config) Handle FQDN For Primary and Standby Host 1 TNS Purposes
   set_fact:
-    primary_host_tns: "{{ hostvars[primary_host]['ansible_facts']['fqdn'] }}"
+    primary_host_tns: "{{ hostvars[primary_host]['ansible_facts']['fqdn'] | default(primary_host + '.' + ansible_facts.domain) }}"
     standby_host1_tns: "{{ hostvars[groups[ standby1 ][0]]['inventory_hostname'] }}.{{ dns_zone_internal }}"
   tags: var
 
