--- a/.github/workflows/oracle-db-logfile-housekeeping.yml
+++ b/.github/workflows/oracle-db-logfile-housekeeping.yml
@@ -48,20 +48,24 @@ permissions:
   id-token: write
 
 jobs:
+  build_target_name:
+    runs-on: ubuntu-latest
+    outputs:
+      TargetHost: ${{ steps.preparetargetname.outputs.TargetHost }}
+    steps:
+      - name: Prepare Target Name
+        id: preparetargetname
+        run: echo TargetHost="environment_name_$(echo ${{ github.event.inputs.TargetEnvironment }} | sed 's/dev/development_dev/;s/test/test_test/;s/training/test_training/;s/stage/preproduction_stage/;s/pre-prod/preproduction_pre_prod/;s/-prod/_production_prod/;s/-/_/g')_${{ github.event.inputs.TargetHosts }}" >> $GITHUB_OUTPUT
   deployment:
-    environment: ${{ github.event.inputs.TargetEnvironment }}
+    name: oracle-db-logfile-housekeeping
+    needs: build_target_name
+    environment: ${{ github.event.inputs.TargetEnvironment }}-preapproved
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.80.0
     timeout-minutes: 1440
     continue-on-error: false
     steps:
-
-      - name: Prepare Delius Primary And All Inventory Name
-        id: prepareinventorynames
-        run: |
-          hosts="environment_name_$(echo ${{ github.event.inputs.TargetEnvironment }} | sed 's/dev/development_dev/;s/test/test_test/;s/training/test_training/;s/stage/preproduction_stage/;s/pre-prod/preproduction_pre_prod/;s/-prod/_production_prod/;s/-/_/g')_${{ github.event.inputs.TargetHosts }}"
-          echo "hosts=${hosts}" >> $GITHUB_OUTPUT
 
       - name: Checkout Inventory From modernisation-platform-configuration-management
         uses: actions/checkout@v4
@@ -103,4 +107,4 @@ jobs:
         run: |
           export ANSIBLE_CONFIG=$ansible_config
           $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
-          -e target=${{ steps.prepareinventorynames.outputs.hosts }}
+          -e target=${{needs.build_target_name.outputs.TargetHost}}
