try ldapsearch for loop

--- a/.github/workflows/ldap-data-refresh.yml
+++ b/.github/workflows/ldap-data-refresh.yml
@@ -150,18 +150,16 @@ jobs:
             --command "bash -c '
 
               declare -a user_array=(${TEST_USERS})
-              echo \"Test users array: $user_array \" >> /tmp/remote_command
-
 
               echo \"user_array is: \${user_array[@]}\" >> /tmp/remote_command
 
-              #[ -f testusers.ldif ] && mv testusers.ldif testusers.ldif.bak
+              [ -f testusers.ldif ] && mv testusers.ldif testusers.ldif.bak
 
-              #for username in \"\${user_array[@]}\"; do
-              #  dn=\"cn=\$username,ou=Users,dc=moj,dc=com\"
-              #  echo \"Getting user \$dn...\"
-              #  ldapsearch -Y external -Q -H ldapi:// -LLL -b \"\$dn\" >> testusers.ldif
-              #done
+              for username in \"\${user_array[@]}\"; do
+                dn=\"cn=\$username,ou=Users,dc=moj,dc=com\"
+                echo \"Getting user \$dn...\"
+                ldapsearch -Y external -Q -H ldapi:// -LLL -b \"\$dn\" >> testusers.ldif
+              done
 
               #awk '\''!NF {delete seen; print; next} !seen[\$0]++'\'' testusers.ldif > testusers.no-duplicates.ldif
               #mv testusers.no-duplicates.ldif testusers.ldif
