--- a/.github/workflows/ldap-data-refresh.yml
+++ b/.github/workflows/ldap-data-refresh.yml
@@ -161,7 +161,7 @@ jobs:
                 ldapsearch -Y external -Q -H ldapi:// -LLL -b \"\$dn\" >> testusers.ldif
               done
 
-              awk \'!NF {delete seen;print;next}; !seen[$0]++\' testusers.ldif > testusers.no-duplicates.ldif
+              awk '\''!NF {delete seen;print;next}; !seen[$0]++'\'' testusers.ldif > testusers.no-duplicates.ldif
               #mv testusers.no-duplicates.ldif testusers.ldif
             '" \
             --interactive
